# ATDM

./: .gitignore  ATDM.tmproj  README.txt
Matlab/: energy_CO.mat  energy_NH.mat  graphs.m  plot_samples.m  plots.m  sample.mat  sample.txt
Mocapy++-1.07/: LICENSE
Mocapy++-1.07/examples/: CMakeLists.txt  Makefile.am  discrete_hmm_with_prior.cpp  hmm_bippo.cpp  hmm_discrete.cpp  hmm_gauss.cpp  hmm_mixed.cpp  hmm_mixed1.cpp  hmm_mixed2.cpp  hmm_mixed3.cpp  hmm_mixed4.cpp  hmm_mixed5.cpp  hmm_mixed6.cpp  hmm_multimixed.cpp  hmm_poisson.cpp  hmm_simple.cpp  infenginemm_example.cpp  mdarray.cpp  pythoninterface.cpp
Mocapy++-1.07/examples/GDM_test_examples/: gdm_test20.cpp  gdm_test2000.cpp  gdm_test4000.cpp  gdm_testotherpars.cpp  test_gd_2comp.cpp  test_gd_dim20.cpp  test_gd_dim5.cpp
Mocapy++-1.07/examples/data/: energy_CO_test.mismask  energy_CO_test20.mismask  energy_CO_verysmall.data  top100.mismask  top100.txt
Mocapy++-1.07/src/: CMakeLists.txt  Makefile.am
Mocapy++-1.07/src/GD/: GDdensity.cpp  GDess.cpp
Mocapy++-1.07/src/GDM/: GDMdensities.cpp  GDMdensity.cpp
Mocapy++-1.07/src/bippo/: bippodensities.cpp
Mocapy++-1.07/src/dirichlet/: DirichletDensity.cpp  DirichletESS.cpp
Mocapy++-1.07/src/discrete/: discretedensities.cpp
Mocapy++-1.07/src/framework/: dbn.cpp  dbn.h  emengine.cpp  node.h  nodefactory.cpp  nodefactory.h  parentmap.cpp
Mocapy++-1.07/src/gaussian/: gaussiandensities.cpp  multigauss.cpp
Mocapy++-1.07/src/gaussian/shrinkage/: Shrinkage.cpp  ShrinkageHelpers.cpp
Mocapy++-1.07/src/inference/: gibbsrandom.cpp  infenginehmm.cpp  infenginemm.cpp  sampleinfengine.cpp
Mocapy++-1.07/src/inference/detail/: generalinfenginemm.cpp
Mocapy++-1.07/src/mixed/: mixeddensities.cpp  mixeddensities.h  mixedess.cpp  mixedess.h
Mocapy++-1.07/src/multimixed/: multimixeddensities.cpp  multimixeddensities.h  multimixedess.cpp  multimixedess.h
Mocapy++-1.07/src/multinomial/: MultinomialDensity.cpp  MultinomialESS.cpp
Mocapy++-1.07/src/poisson/: poissoness.cpp
Mocapy++-1.07/src/utils/: LogFactorial.cpp  utils.cpp
Mocapy++-1.07/src/utils/netlib/cephes/: gamma.c
Mocapy++-1.07/src/vonmises/: vonmisesdensities.cpp  vonmisesess.cpp
Mocapy++-1.07/src/vonmises2d/: vonmises2dess.cpp
Mocapy++-1.07/tests/: CMakeLists.txt
delivarebles/Mocapy++-1.07/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  autogen.sh  configure.ac
delivarebles/Mocapy++-1.07/examples/: CMakeLists.txt  hmm_dirichlet.cpp  hmm_discrete.cpp  hmm_factorial.cpp  hmm_gauss_1d.cpp  hmm_gdm.cpp  hmm_kent.cpp  hmm_mixed1.cpp  hmm_mixed2.cpp  hmm_mixed4.cpp  hmm_multinomial.cpp  hmm_torus.cpp  hmm_vonmises.cpp  infenginehmm_example.cpp  mlr-uni.cpp  pythoninterface.i  pythoninterface.txt
delivarebles/Mocapy++-1.07/examples/GDM_test_examples/: gdm_test10.cpp  gdm_test1000.cpp  gdm_test5.cpp  test_gd_dim10.cpp  test_gd_other_pars.cpp
delivarebles/Mocapy++-1.07/examples/data/: energy_CO_test20.data  energy_CO_test5.data  energy_CO_test5.mismask  energy_CO_verysmall.mismask  energy_NH.mismask  top100_clean.new.txt
delivarebles/Mocapy++-1.07/src/: CMakeLists.txt  mate
delivarebles/Mocapy++-1.07/src/Debug/: Makefile
delivarebles/Mocapy++-1.07/src/Dummyrandom/: Makefile
delivarebles/Mocapy++-1.07/src/GD/: GDdensities.cpp
delivarebles/Mocapy++-1.07/src/GDM/: GDMess.cpp
delivarebles/Mocapy++-1.07/src/Profile/: Makefile
delivarebles/Mocapy++-1.07/src/Release/: Makefile
delivarebles/Mocapy++-1.07/src/bippo/: bippo.cpp  bippoess.cpp
delivarebles/Mocapy++-1.07/src/dirichlet/: DirichletDensities.cpp
delivarebles/Mocapy++-1.07/src/discrete/: discreteess.cpp  discretepriors.cpp
delivarebles/Mocapy++-1.07/src/framework/: dbn.h  emengine.cpp  essbase.cpp
delivarebles/Mocapy++-1.07/src/gaussian/: gaussianess.cpp
delivarebles/Mocapy++-1.07/src/inference/: abstractinfengine.cpp  fwbtrandom.cpp  infenginemcmc.cpp  mcmc.cpp  moreabstractinfengine.cpp
delivarebles/Mocapy++-1.07/src/inference/detail/: forwardbacktracker.cpp
delivarebles/Mocapy++-1.07/src/kent/: kentdensities.cpp  kentess.cpp
delivarebles/Mocapy++-1.07/src/m4/: ac_LAPACK.m4  ax_boost_base.m4  ax_boost_serialization.m4
delivarebles/Mocapy++-1.07/src/mixed/: mixeddensities.cpp  mixedess.h
delivarebles/Mocapy++-1.07/src/multinomial/: MultinomialDensities.cpp
delivarebles/Mocapy++-1.07/src/poisson/: poissondensities.cpp  poissonsample.cpp
delivarebles/Mocapy++-1.07/src/utils/: random_data.cpp  randomgen.cpp
delivarebles/Mocapy++-1.07/src/utils/netlib/: Makefile.am  integrate.cpp
delivarebles/Mocapy++-1.07/src/vonmises/: vonmises.cpp
delivarebles/Mocapy++-1.07/src/vonmises2d/: vonmises2d.cpp  vonmises2ddensities.cpp
delivarebles/Mocapy++-1.07/tests/: infenginehmm_test.cpp  infenginemm_test.cpp
litterature/continuous_discrete/: energy_CO.mismask
report/: bibliography.bib  report.tex
